# mp4join

./: README.md
src/mp4join/: CMakeCache.txt  CMakeLists.txt  Makefile  aac.c  aac.h  cmake_install.cmake  fileops.c  fileops.h  interface.c  interface.h  main.c  mp4fileops.c  mp4fileops.h  mp4join.desktop  mp4ops.h
src/mp4join-console/: compile.sh  config.c  config.h  fappend.c  fappend.h  main.c  main.h  mp4ops.c  mp4ops.h  mp4v.c  mp4v.h  run.sh
src/mp4join-console/include/: mpeg4ip_config.h
src/mp4join-console/libs/: libmp4av.so.0.0.0  libmp4v2.so.0.0.0  libmpeg4ip_gnu.so.0  libmpeg4ip_gnu.so.0.0.0
